update some wording

--- a/templates/page.html
+++ b/templates/page.html
@@ -83,7 +83,7 @@
           <div id="email-comment" class="muted text-sm">
             <blockquote style="margin-left: 0;">
               <p>
-              我暫時還找不到足夠滿意的留言系統，如果你對於這個網站或這篇文有任何想討論或分享的，歡迎<a class="muted" href="mailto:pj@pinchlime.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>pj@pinchlime.com</code> 跟我說！
+              如果你對於這個網站或這篇文有任何想討論或分享的，歡迎<a class="muted" href="mailto:pj@pinchlime.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>pj@pinchlime.com</code> 跟我說，或在下方留言分享！
               </p>
             </blockquote>
           </div>
