update zola version

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,16 +33,14 @@
     <meta name="author" itemprop="author" content="{{ config.extra.author }}" />
     <meta itemprop="headline" content="{{ config.title }}" />
     <meta itemprop="copyrightYear" content="{{ now() | date(format="%Y") }}" />
-    <link rel="icon" href="{{ get_url(path="site/images/favicon-32x32.png",cachebust=true) }}"
+    <link rel="icon" href="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png"
     type="image/x-icon"> 
-    <link rel="icon" type="image/png" sizes="192x192" href="{{ get_url(path="site/images/android-icon-192x192.png",cachebust=true) }}"> 
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ get_url(path="site/images/favicon-32x32.png",cachebust=true) }}"> 
-    <link rel="icon" type="image/png" sizes="96x96" href="{{ get_url(path="site/images/favicon-96x96.png",cachebust=true) }}"> 
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ get_url(path="site/images/favicon-16x16.png",cachebust=true) }}"> 
+    <link rel="icon" type="image/png" sizes="32x32" href="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png"> 
+    <link rel="icon" type="image/png" sizes="16x16" href="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png"> 
     <link rel="manifest" href="{{ get_url(path="site/images/manifest.json") }}">
     <link rel="me" href="https://pkm.social/@pj"> 
     <meta name="msapplication-TileColor" content="{{ config.extra.theme_color }}" />
-    <meta name="msapplication-TileImage" content="{{ get_url(path="site/images/ms-icon-144x144.png",cachebust=true) }}">
+    <meta name="msapplication-TileImage" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png">
     <meta name="theme-color" content="{{ config.extra.theme_color }}" />
 
     <meta
