--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -85,7 +85,8 @@ html {
 }
 
 body {
-  font-family: Inter, "Menlo", "PT Mono", "Arial", "Helvetica", "Helvetica Neue", "Noto Sans TC", "PingFang TC", "PingFang SC", sans-serif, Georgia;
+  font-family: jf-jinxuan, "Inter", "Menlo", "PT Mono", "Arial", "Helvetica", "Helvetica Neue", "Noto Sans TC", "PingFang TC", "PingFang SC", sans-serif, Georgia;
+  font-weight: 300;
   color: var(--color-text);
   background-color: var(--colors-background);
 }
@@ -101,7 +102,7 @@ h1 {
   padding-bottom: 0.2rem;
   margin-bottom: 0.2rem;
   line-height: 1.6;
-  font-weight: 500;
+  font-weight: 600;
   position: relative;
 }
 h2 {
