--- a/templates/archive.html
+++ b/templates/archive.html
@@ -5,17 +5,22 @@
 {% block ogdesc %}{{ section.title }}{% endblock ogdesc %}
 {% block ogurl %}{{ config.base_url }}{{ section.path }}{% endblock ogurl %}
 {% block main %} 
+{% set_global blog_section = get_section(path="blog/_index.md") -%}
+{% set_global section_content = blog_section.content %}
+<div class="element-container">
 <div class="element">
+<h1>Blog</h1>
+<br>
 {% set all_blog_pages = get_section(path="blog/_index.md") %}
-
 {% for year, posts in all_blog_pages.pages | group_by(attribute="year") %}
 <h2>{{ year }}</h2>
-
+<br>
 <ul class="list-none">
   {% for post in posts %}
   <li>{{ macro::post_min(page=post) }}</li>
   {% endfor %}
 </ul>
 {% endfor %} 
+</div>
 </div>
 {% endblock main %}
