--- a/templates/macros.html
+++ b/templates/macros.html
@@ -38,25 +38,32 @@
 {% macro post_min(page) %}
 <div style="display: flex;justify-content: space-between">
 <a class="no-underline li_archive" href="{{ page.permalink }}">{{ page.title }}</a> 
-<span class="muted text-sm">{{ page.date }}</span>
+<span class="muted text-sm" style="font-family: menlo;">{{ page.date | date(format="%b %d") }}</span>
 </div>
 {% endmacro post_min %}
 
 {% macro snapshots_min(page) %}
 <div style="display: flex;justify-content: space-between">
 <a class="no-underline li_archive" href="{{ page.permalink }}">{{ page.title }}</a> 
-<span class="muted text-sm">{{ page.date }}</span>
+<span class="muted text-sm" style="font-family: menlo;">{{ page.date | date(format="%b %d") }}</span>
 </div>
-{% endmacro post_min %}
+
+{% endmacro snapshots_min %}
 
 {% macro newsletters_min(page) %}
-<div style="display: flex;justify-content: space-between">
-  <div class="li_archive">
-    <span>＃{{page.extra.issues }} </span><a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a> 
+<div style="display: flex; justify-content: space-between;">
+  <div style="display: flex;">
+    <div class="li_archive">
+      <span style="margin-right: 2rem;">＃{{page.extra.issues }}</span>
+    </div>
+    <div class="li_archive">
+      <a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a>
+    </div>
   </div>
-  <span class="muted text-sm">{{ page.date }}</span>
+  <span class="muted text-sm" style="font-family: menlo;">{{ page.date | date(format="%b %d") }}</span>
 </div>
-{% endmacro post_min %}
+
+{% endmacro newsletters_min %}
 
 {% macro post_side(page) %}
 <a href="{{ page.permalink }}">{{ page.title }}</a><br>
