--- a/templates/newsletter_archive.html
+++ b/templates/newsletter_archive.html
@@ -5,11 +5,21 @@
 {% block ogdesc %}{{ section.title }}{% endblock ogdesc %}
 {% block ogurl %}{{ config.base_url }}{{ section.path }}{% endblock ogurl %}
 {% block main -%}
+{% set_global newsletters_section = get_section(path="newsletters/_index.md") -%}
+{% set_global section_content = newsletters_section.content %}
+<div class="element-container">
 <div class="element">
+  <setion>
+    {{ section_content | safe}}
+  </setion>
+</div> 
+<div class="element">
+<h1>Newsletters</h1>
+<br>
 {% set all_blog_pages = get_section(path="newsletters/_index.md") %}
-
 {% for year, posts in all_blog_pages.pages | group_by(attribute="year") %}
 <h2>{{ year }}</h2>
+<br>
 
 <ul class="list-none">
   {% for post in posts %}
@@ -17,5 +27,6 @@
   {% endfor %}
 </ul>
 {% endfor %} 
+</div>
 </div>
 {% endblock main %}
