--- a/templates/macros.html
+++ b/templates/macros.html
@@ -53,7 +53,7 @@
 {% macro newsletters_min(page) %}
 <div style="display: flex; justify-content: space-between;">
   <div style="display: flex;">
-    <div class="li_archive">
+    <div class="li_archive_news">
       <span style="margin-right: 1rem;">＃{{page.extra.issues }}</span><a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a>
     </div>
   </div>
