--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" href="{{ get_url(path="site/styles/site.css",
     trailing_slash=false,cachebust=true) | safe }}" async>
     <title>{% block title %}{{ config.title }}{% endblock title %}</title>
