preconnect to justfont

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png"> 
     <link rel="manifest" href="{{ get_url(path="site/images/manifest.json") }}">
     <link rel="me" href="https://pkm.social/@pj"> 
+    <link rel="preconnect" href="//ds.justfont.com" crossorigin>
     <meta name="msapplication-TileColor" content="{{ config.extra.theme_color }}" />
     <meta name="msapplication-TileImage" content="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/favicon-32x32_to9pAp.png">
     <meta name="theme-color" content="{{ config.extra.theme_color }}" />
