change page breadcrumb settings

--- a/templates/library_page.html
+++ b/templates/library_page.html
@@ -1,6 +1,6 @@
 {% extends "page.html" -%}
 {% block breadcrumbs -%}
-{{ macro::page_breadcrumbs(current_page=page) }}
+{{ macro::page_breadcrumbs(page=page) }}
 {% endblock breadcrumbs %}
 {% block nav_bar %}
 <nav class="navbar-top">
