--- a/templates/taxonomy_single.html
+++ b/templates/taxonomy_single.html
@@ -21,13 +21,16 @@
     <div class="page-header">
       <h1> {{ term.name }} </h1>
     </div>
+    {% for year, posts in term.pages | group_by(attribute="year") %}
+    <h2>{{ year }}</h2>
     <ul class="root-ul">
-      {% for page in term.pages | sort(attribute="date") | reverse %} 
+      {% for post in posts | sort(attribute="date") | reverse %} 
       <li>
-        {{ macro::post_min(page=page) }}
+        {{ macro::post_min(page=post) }}
       </li>
       {% endfor %} 
     </ul>
+    {% endfor %}
   </section>
 </div>
 {% endblock main %}
