--- a/templates/stream.html
+++ b/templates/stream.html
@@ -49,25 +49,12 @@
       <section id="contact">
       <div id="email-comment" class="muted text-sm">
         <p style="margin-left: 0;">
-        如果你想回覆或討論特定的某一則 Stream ，歡迎提到它的編號，並且可以<a class="muted" href="mailto:pj@pinchlime.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>pj@pinchlime.com</code> 跟我說，或在下方留言分享！
+        如果你想回覆或討論特定的某一則 Stream ，歡迎提到它的編號，並且可以<a class="muted" href="mailto:pj@pinchlime.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>pj@pinchlime.com</code> 跟我分享！
         </p>
       </div>
       </section>
       {% endif %}
       {% endblock outro %}
-      <section id="cusdis">
-        <h3>Write your comment</h3>
-        <br>
-        <div id="cusdis_thread"
-        data-host="https://comments.pinchlime.com"
-        data-app-id="d39e9f8e-53f2-48bc-a699-980cc0a4b00c"
-        data-page-id="{{ page.path }}"
-        data-page-url="{{ config.base_url }}{{ page.path }}"
-        data-page-title="{{ page.title }}"
-        data-theme="light"
-        ></div>
-        <script async defer src="https://comments.pinchlime.com/js/cusdis.es.js"></script>
-      </section>
 </div>
 {% endblock main%}
 
